--- a/src/SearchBox.css
+++ b/src/SearchBox.css
@@ -24,6 +24,26 @@
   width: 24px;
 }
 
+.closeIcon {
+  height: 24px;
+  width: 24px;
+  fill: #ff572e;
+}
+
+.clearButton {
+    position: absolute;
+    right: 16px;
+    top: 12px;
+    height: 24px;
+    width: 24px;
+    cursor: pointer;
+    padding: 0;
+    border: 0;
+    outline: none;
+    background: none;
+    transition: all 0.1s ease;
+}
+
 .inputWrapper {
   position: relative;
 }
@@ -41,6 +61,9 @@
   }
 
   .searchIcon {
+    top: 8px;
+  }
+  .clearButton {
     top: 8px;
   }
 }
